--- a/css.css
+++ b/css.css
@@ -1,6 +1,7 @@
 form { width: 100%; }
 #trollbox {
   font-family: sans-serif;
+  font-size: medium;
 }
 #trollbox_scroll {
   background-color: #272822;
@@ -37,7 +38,7 @@ form { width: 100%; }
 }
 .trollbox_line_bot {
   padding: 0 5px;
-  font-family: px_sans_nouveaux;
+  font-family: sans-serif;
   color: #ddd;
   font-style: italic;
 }
@@ -58,10 +59,10 @@ form { width: 100%; }
 .trollbox_nick,
 .ui_group>.trollbox_nick {
   white-space: nowrap;
-  font-family: _tomo, monospace;
+  font-family: sans-serif;
   font-style: normal;
   text-align: right;
-  max-width: 90px;
+  max-width: 80px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
@@ -98,10 +99,10 @@ img{
 }
 
 #trollbox_nick_btn {
-  border-radius: 10px;
+  border-radius: 5px;
 }
 #roundedsend {
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 /*
