--- a/css.css
+++ b/css.css
@@ -1,7 +1,6 @@
 form { width: 100%; }
 #trollbox {
-  font-family: sans-serif;
-  font-size: medium;
+  font-family: monospace;
 }
 #trollbox_scroll {
   background-color: #272822;
@@ -17,6 +16,7 @@ form { width: 100%; }
   background-color: #272822;
   color: #f8f8f2;
   padding: 5px;
+  width: 250px;
   margin-top: 1px;
   margin-bottom: 3px;
   overflow: hidden;
