--- a/css.css
+++ b/css.css
@@ -1,6 +1,7 @@
 form { width: 100%; }
 #trollbox {
-  font-family: monospace;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
 }
 #trollbox_scroll {
   background-color: #272822;
