--- a/css.css
+++ b/css.css
@@ -1,7 +1,7 @@
 form { width: 100%; }
 #trollbox {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: medium;
+  font-size: small;
 }
 #trollbox_scroll {
   background-color: #272822;
@@ -63,7 +63,7 @@ form { width: 100%; }
   font-family: sans-serif;
   font-style: normal;
   text-align: right;
-  max-width: 80px;
+  max-width: 150px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
