--- a/css.css
+++ b/css.css
@@ -25,6 +25,8 @@ form { width: 100%; }
 }
 #trollbox_input {
   width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
 }
 .trollbox_line > span {
   -ms-flex-item-align: start;
